2004-02-20  Werner Koch  <wk@gnupg.org>

        Released 1.1.92.
	
	* configure.ac: Set LT to C11/A0/R0.

2004-02-11  Werner Koch  <wk@gnupg.org>

	* autogen.sh (check_version): Removed bashism and simplified.

2004-02-06  Werner Koch  <wk@gnupg.org>

	* configure.ac: Add rfc2268 cipher algorithm.

2004-01-25  Moritz Schulte  <mo@g10code.com>

	* THANKS: Updated.

2003-12-19  Werner Koch  <wk@gnupg.org>

	Released 1.1.91.
	
	* configure.ac: Bumbed LT version to C10/A3/R1.

2003-12-08  Werner Koch  <wk@gnupg.org>

	* Makefile.am (dist-hook): Don't distribute stuff from the now
	obsolete scripts dir.
	(EXTRA_DIST): Remove README_alpha
	* README-alpha: Removed.
	* configure.ac (AM_CONFIG_AUX_DIR): Removed.

	* COPYING.DOC: Removed.
	* Makefile.am (EXTRA_DIST): Added README.CVS and
	autogen.sh. Removed COPYING.DOC.

2003-11-14  Werner Koch  <wk@gnupg.org>

	Released 1.1.90.
	
	* configure.ac: Bumbed LT version to C10/A3/R0.
	
	* configure.ac (have_ld_version_script): Set the default in
	a separate test.
	(PRINTABLE_OS_NAME): Don't handle the Hurd extra, this leads to
	conflicts with BSD based GNU systems.  The Hurd has now a working
	uname.

2003-11-04  Werner Koch  <wk@gnupg.org>

	* configure.ac (USE_SHA1): Make sure it is always included.
	(USE_RMD160): Removed this AM conditional.

2003-10-31  Werner Koch  <wk@gnupg.org>

	* configure.ac: Bumbed version number to 1.1.90-cvs for futher
	development

	Released 1.1.44.
	
	* acinclude.m4 (AC_CHECK_PTH): Added.
	* configure.ac: Use it here instead of the generic lib test.
	Bumbed LT vesion to C9/A2/R0.

2003-10-27  Werner Koch  <wk@gnupg.org>

	* configure.ac: Give a hint on where libgpg-error is available.
	Reformatted long lines.  Don't include gcrypt-defs.h.
	(--enable-gcc-warnings): New option.

2003-10-24  Moritz Schulte  <mo@g10code.com>

	* configure.ac: Check for socklen_t.

2003-10-11  Moritz Schulte  <mo@g10code.com>

	* acinclude.m4: Update AM_PATH_GPG_ERROR macro.

2003-09-04  Werner Koch  <wk@gnupg.org>
