@@ -80,6 +80,7 @@ AC_DEFINE_UNQUOTED(VERSION, "$VERSION", [Version of this package])
 ##########################
 
 # Used by libgcrypt-config
+LIBGCRYPT_CONFIG_SONAME_NUMBER=`expr $LIBGCRYPT_LT_CURRENT - $LIBGCRYPT_LT_AGE`
 LIBGCRYPT_CONFIG_LIBS="-lgcrypt"
 LIBGCRYPT_CONFIG_CFLAGS=""
 LIBGCRYPT_CONFIG_LIBS_PTHREAD="-lgcrypt-pthread"
@@ -654,6 +655,7 @@ fi
 #
 GNUPG_FIX_HDR_VERSION([src/gcrypt.h], GCRYPT_VERSION)
 
+AC_SUBST(LIBGCRYPT_CONFIG_SONAME_NUMBER)
 AC_SUBST(LIBGCRYPT_CONFIG_LIBS)
 AC_SUBST(LIBGCRYPT_CONFIG_CFLAGS)
 AC_SUBST(LIBGCRYPT_CONFIG_LIBS_PTHREAD)
