@@ -1,3 +1,9 @@
+2004-03-05  Werner Koch  <wk@gnupg.org>
+
+	* libgcrypt.m4: Optionally check the SONAME number.
+
+	* libgcrypt-config.in: Add option --soname-number
+
 2004-03-01  Marcus Brinkmann  <marcus@g10code.de>
 
 	* Makefile.am (libgcrypt_la_SOURCES): Add ath.c.
