@@ -1,3 +1,7 @@
+2004-03-05  Werner Koch  <wk@gnupg.org>
+
+	* configure.ac (LIBGCRYPT_CONFIG_SONAME_NUMBER): New.
+
 2004-02-20  Werner Koch  <wk@gnupg.org>
 
         Released 1.1.92.
